@@ -1,5 +1,7 @@
 *SVN*
 
+* Use checkout instead of merge for git SCM [nuttycom]
+
 * Fix typo in Subversion SCM module, encountered when an update fails [kemiller]
 
 * Fix documentation typo in upload.rb [evolving_jerk]
